# aoc2023

./: .gitignore  Cargo.toml  README.md
day1/src/: main.rs
day2/src/: main.rs
day3/src/: main.rs
day4/: Cargo.toml
day4/src/: main.rs
day5/: Cargo.toml
day5/data/: test_Test.txt
day5/src/: main.rs
day6/: Cargo.toml
day6/src/: main.rs
day7/: Cargo.toml
day7/src/: main.rs
day8/: Cargo.toml  debug.txt
day8/src/: main.rs
utils/src/: lib.rs
