[package]
name = "day5"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.29"
indicatif = "0.17.7"
once_cell = { version = "1.18.0", features = [] }
rand = "0.8.5"
rayon = "1.8.0"
regex = "1.10.2"
tokio = { version = "1.34.0", features = ["rt", "rt-multi-thread", "time", "tokio-macros", "full"] }
